--- a/frontend/src/app/all-properties/all-properties.page.html
+++ b/frontend/src/app/all-properties/all-properties.page.html
@@ -2,3 +2,9 @@
 <button class="mt-4 px-4 py-2 bg-purple-500 text-white rounded" (click)="goToFavorites()">
     Favoritos
 </button>
+<button class="mt-4 px-4 py-2 bg-purple-500 text-white rounded">
+    Detalles de la propiedad
+</button>
+<button class="mt-4 px-4 py-2 bg-purple-500 text-white rounded">
+    Comparar propiedades
+</button>
