--- a/frontend/src/app/favorites/favorites.page.html
+++ b/frontend/src/app/favorites/favorites.page.html
@@ -1,1 +1,4 @@
 <p>favorites works!</p>
+<button class="mt-4 px-4 py-2 bg-purple-500 text-white rounded" (click)="goToAllProperties()">
+    Volver
+</button>
