Faltaba un boton

--- a/frontend/src/app/pages/admin-panel/admin-panel.page.html
+++ b/frontend/src/app/pages/admin-panel/admin-panel.page.html
@@ -5,4 +5,10 @@
 >
   Lista de usuarios registrados
 </button>
+<button
+  class="m-3 mt-4 px-4 py-2 bg-purple-500 text-white rounded"
+  (click)="goToPropertyList()"
+>
+  Lista de propiedades
+</button>
 <router-outlet>
