--- a/frontend/src/app/pages/users/users.page.html
+++ b/frontend/src/app/pages/users/users.page.html
@@ -1,4 +1,7 @@
 <p>users works!</p>
-<button class="mt-4 px-4 py-2 bg-purple-500 text-white rounded" (click)="goToAdminPanel()">
-    Volver
+<button
+  class="mt-4 px-4 py-2 bg-purple-500 text-white rounded"
+  (click)="goToAdminPanel()"
+>
+  Volver
 </button>
