--- a/frontend/src/app/pages/users/users.page.html
+++ b/frontend/src/app/pages/users/users.page.html
@@ -1,7 +1,161 @@
-<p>users works!</p>
-<button
-  class="mt-4 px-4 py-2 bg-purple-500 text-white rounded"
-  (click)="goToAdminPanel()"
->
-  Volver
-</button>
+<div class="min-h-screen bg-slate-900 p-4">
+  <button
+    class="mt-4 px-4 py-2 bg-purple-700 text-white rounded"
+    (click)="goToAdminPanel()"
+  >
+    Volver
+  </button>
+  <div class="max-w-[720px] mx-auto">
+    <div
+      class="block mb-4 mx-auto border-b border-slate-600 pb-2 max-w-[360px]"
+    ></div>
+    <div
+      class="relative flex flex-col w-full h-full text-slate-200 bg-slate-800 shadow-md rounded-xl bg-clip-border"
+    >
+      <div
+        class="relative mx-4 mt-4 overflow-hidden text-slate-200 bg-slate-800 rounded-none bg-clip-border"
+      >
+        <div class="flex items-center justify-between">
+          <div>
+            <h3 class="text-lg font-semibold text-slate-100">
+              Lista de Usuarios
+            </h3>
+          </div>
+          <div class="flex flex-col gap-2 shrink-0 sm:flex-row">
+            <button
+              class="flex select-none items-center gap-2 rounded bg-slate-700 py-2.5 px-4 text-xs font-semibold text-white shadow-md transition-all hover:bg-slate-600 hover:text-white"
+              type="button"
+            >
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 0 24 24"
+                fill="currentColor"
+                aria-hidden="true"
+                stroke-width="2"
+                class="w-4 h-4"
+              >
+                <path
+                  d="M6.25 6.375a4.125 4.125 0 118.25 0 4.125 4.125 0 01-8.25 0zM3.25 19.125a7.125 7.125 0 0114.25 0v.003l-.001.119a.75.75 0 01-.363.63 13.067 13.067 0 01-6.761 1.873c-2.472 0-4.786-.684-6.76-1.873a.75.75 0 01-.364-.63l-.001-.122zM19.75 7.5a.75.75 0 00-1.5 0v2.25H16a.75.75 0 000 1.5h2.25v2.25a.75.75 0 001.5 0v-2.25H22a.75.75 0 000-1.5h-2.25V7.5z"
+                ></path>
+              </svg>
+              Crear usuario
+            </button>
+          </div>
+        </div>
+      </div>
+      <div class="p-0 overflow-scroll">
+        <table class="w-full mt-4 text-left table-auto min-w-max">
+          <thead>
+            <tr>
+              <th
+                class="p-4 transition-colors cursor-pointer border-y border-slate-600 bg-slate-700 hover:bg-slate-600"
+              >
+                <p
+                  class="flex items-center justify-between gap-2 font-sans text-sm font-normal leading-none text-slate-300"
+                >
+                  ID
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    fill="none"
+                    viewBox="0 0 24 24"
+                    stroke-width="2"
+                    stroke="currentColor"
+                    aria-hidden="true"
+                    class="w-4 h-4"
+                  >
+                    <path
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      d="M8.25 15L12 18.75 15.75 15m-7.5-6L12 5.25 15.75 9"
+                    ></path>
+                  </svg>
+                </p>
+              </th>
+              <th
+                class="p-4 transition-colors cursor-pointer border-y border-slate-600 bg-slate-700 hover:bg-slate-600"
+              >
+                <p
+                  class="flex items-center justify-between gap-2 font-sans text-sm font-normal leading-none text-slate-300"
+                >
+                  Member
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    fill="none"
+                    viewBox="0 0 24 24"
+                    stroke-width="2"
+                    stroke="currentColor"
+                    aria-hidden="true"
+                    class="w-4 h-4"
+                  >
+                    <path
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      d="M8.25 15L12 18.75 15.75 15m-7.5-6L12 5.25 15.75 9"
+                    ></path>
+                  </svg>
+                </p>
+              </th>
+              <th
+                class="p-4 transition-colors cursor-pointer border-y border-slate-600 bg-slate-700 hover:bg-slate-600"
+              >
+                <p
+                  class="flex items-center justify-between gap-2 font-sans text-sm font-normal leading-none text-slate-300"
+                >
+                  Rol
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    fill="none"
+                    viewBox="0 0 24 24"
+                    stroke-width="2"
+                    stroke="currentColor"
+                    aria-hidden="true"
+                    class="w-4 h-4"
+                  >
+                    <path
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      d="M8.25 15L12 18.75 15.75 15m-7.5-6L12 5.25 15.75 9"
+                    ></path>
+                  </svg>
+                </p>
+              </th>
+              <th
+                class="p-4 transition-colors cursor-pointer border-y border-slate-600 bg-slate-700 hover:bg-slate-600"
+              >
+                <p
+                  class="flex items-center justify-between gap-2 font-sans text-sm font-normal leading-none text-slate-300"
+                >
+                  Fecha de Registro
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    fill="none"
+                    viewBox="0 0 24 24"
+                    stroke-width="2"
+                    stroke="currentColor"
+                    aria-hidden="true"
+                    class="w-4 h-4"
+                  >
+                    <path
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                      d="M8.25 15L12 18.75 15.75 15m-7.5-6L12 5.25 15.75 9"
+                    ></path>
+                  </svg>
+                </p>
+              </th>
+              <th
+                class="p-4 transition-colors cursor-pointer border-y border-slate-600 bg-slate-700 hover:bg-slate-600"
+              >
+                <p
+                  class="flex items-center justify-between gap-2 font-sans text-sm font-normal leading-none text-slate-300"
+                ></p>
+              </th>
+            </tr>
+          </thead>
+          <tbody id="user-container"></tbody>
+        </table>
+      </div>
+      <div class="flex items-center justify-between p-3"></div>
+    </div>
+  </div>
+</div>
