--- a/frontend/src/app/pages/users/users.page.html
+++ b/frontend/src/app/pages/users/users.page.html
@@ -13,7 +13,7 @@
       class="relative flex flex-col w-full h-full text-slate-200 bg-slate-800 shadow-md rounded-xl bg-clip-border"
     >
       <div
-        class="relative mx-4 mt-4 overflow-hidden text-slate-200 bg-slate-800 rounded-none bg-clip-border"
+        class="relative mx-4 mt-4 text-slate-200 bg-slate-800 rounded-none bg-clip-border"
       >
         <div class="flex items-center justify-between">
           <div>
@@ -23,7 +23,7 @@
           </div>
           <div class="flex flex-col gap-2 shrink-0 sm:flex-row">
             <button
-              class="flex select-none items-center gap-2 rounded bg-slate-700 py-2.5 px-4 text-xs font-semibold text-white shadow-md transition-all hover:bg-slate-600 hover:text-white"
+              class="flex select-none items-center gap-2 rounded bg-slate-700 py-2.5 px-4 text-xs font-semibold text-white shadow-md transition-all hover:bg-slate-600 hover:text-white mb-4"
               type="button"
             >
               <svg
@@ -43,7 +43,7 @@
           </div>
         </div>
       </div>
-      <div class="p-0 overflow-scroll">
+      <div class="overflow-y-auto max-h-[400px]">
         <table class="w-full mt-4 text-left table-auto min-w-max">
           <thead>
             <tr>
@@ -77,7 +77,7 @@
                 <p
                   class="flex items-center justify-between gap-2 font-sans text-sm font-normal leading-none text-slate-300"
                 >
-                  Member
+                  Usuario
                   <svg
                     xmlns="http://www.w3.org/2000/svg"
                     fill="none"
