quedo el registro. Pendiente: agregar las validaciones

--- a/frontend/src/app/pages/home/home.page.html
+++ b/frontend/src/app/pages/home/home.page.html
@@ -2,3 +2,6 @@
 <button class="m-3 mt-4 px-4 py-2 bg-purple-500 text-white rounded" (click)="Login()">
     Login
 </button>
+<button class="m-3 mt-4 px-4 py-2 bg-purple-500 text-white rounded" (click)="Register()">
+    Register
+</button>
