validaciones de registro listas

--- a/frontend/src/app/pages/register/register.page.html
+++ b/frontend/src/app/pages/register/register.page.html
@@ -6,19 +6,22 @@
           Create your account
         </h2>
         
-        <form class="mt-6 space-y-4" (ngSubmit)="this.onSubmitRegister()">
+        <form [formGroup]="validateRegister" class="mt-6 space-y-4" (ngSubmit)="this.onSubmitRegister()">
           <!-- Nombre -->
           <div>
             <label for="name" class="block text-sm font-bold text-white">Name</label>
             <div class="mt-1">
               <input
-                [(ngModel)]="this.name"
+                formControlName="name"
                 id="name"
                 name="name"
                 type="text"
                 required=""
                 class="block w-full appearance-none rounded-md border border-gray-300 bg-transparent px-3 py-2 placeholder-gray-400 text-white focus:border-indigo-500 focus:outline-none focus:ring-indigo-500 sm:text-sm"
               />
+              <div *ngIf="validateRegister.get('name')?.invalid && validateRegister.get('name')?.touched">
+                <small class="text-red-500 text-xs italic" *ngIf="validateRegister.get('name')?.errors?.['nameError']">{{ validateRegister.get('name')?.errors?.['nameError'] }}</small>
+              </div>
             </div>
           </div>
 
@@ -27,13 +30,16 @@
             <label for="lastname" class="block text-sm font-bold text-white">LastName</label>
             <div class="mt-1">
               <input
-                [(ngModel)]="this.lastname"
+                formControlName="lastname"
                 id="lastname"
                 name="lastname"
                 type="text"
                 required=""
                 class="block w-full appearance-none rounded-md border border-gray-300 bg-transparent px-3 py-2 placeholder-gray-400 text-white focus:border-indigo-500 focus:outline-none focus:ring-indigo-500 sm:text-sm"
               />
+              <div *ngIf="validateRegister.get('lastname')?.invalid && validateRegister.get('lastname')?.touched">
+                <small class="text-red-500 text-xs italic" *ngIf="validateRegister.get('lastname')?.errors?.['lastnameError']">{{ validateRegister.get('lastname')?.errors?.['lastnameError'] }}</small>
+              </div>
             </div>
           </div>
 
@@ -42,7 +48,7 @@
             <label for="email" class="block text-sm font-bold text-white">Email address</label>
             <div class="mt-1">
               <input
-                [(ngModel)]="this.email"
+                formControlName="email"
                 id="email"
                 name="email"
                 type="email"
@@ -50,6 +56,9 @@
                 required=""
                 class="block w-full appearance-none rounded-md border border-gray-300 bg-transparent px-3 py-2 placeholder-gray-400 text-white focus:border-indigo-500 focus:outline-none focus:ring-indigo-500 sm:text-sm"
               />
+              <div *ngIf="validateRegister.get('email')?.invalid && validateRegister.get('email')?.touched">
+                <small class="text-red-500 text-xs italic" *ngIf="validateRegister.get('email')?.errors?.['emailError']">{{ validateRegister.get('email')?.errors?.['emailError'] }}</small>
+              </div>
             </div>
           </div>
 
@@ -58,13 +67,16 @@
             <label for="password" class="block text-sm font-bold text-white">Password</label>
             <div class="mt-1">
               <input
-                [(ngModel)]="this.password"
+                formControlName="password"
                 id="password"
                 name="password"
                 type="password"
                 required=""
                 class="block w-full appearance-none rounded-md border border-gray-300 bg-transparent px-3 py-2 placeholder-gray-400 text-white focus:border-indigo-500 focus:outline-none focus:ring-indigo-500 sm:text-sm"
               />
+              <div *ngIf="validateRegister.get('password')?.invalid && validateRegister.get('password')?.touched">
+                <small class="text-red-500 text-xs italic" *ngIf="validateRegister.get('password')?.errors?.['passwordError']">{{ validateRegister.get('password')?.errors?.['passwordError'] }}</small>
+              </div>
             </div>
           </div>
 
@@ -73,13 +85,18 @@
             <label for="confirmPassword" class="block text-sm font-bold text-white">Confirm Password</label>
             <div class="mt-1">
               <input
-                [(ngModel)]="this.confirmPassword"
+                formControlName="confirmPassword"
                 id="confirmPassword"
                 name="confirmPassword"
                 type="password"
                 required=""
                 class="block w-full appearance-none rounded-md border border-gray-300 bg-transparent px-3 py-2 placeholder-gray-400 text-white focus:border-indigo-500 focus:outline-none focus:ring-indigo-500 sm:text-sm"
               />
+              <div *ngIf="validateRegister.get('confirmPassword')?.invalid && validateRegister.get('confirmPassword')?.touched">
+                <small class="text-red-500 text-xs italic"> La contraseña confirmada es requerida.</small>
+                <br>
+                <small class="text-red-500 text-xs italic" *ngIf="validateRegister.get('confirmPassword')?.errors?.['repeatPasswordError']">{{ validateRegister.get('confirmPassword')?.errors?.['repeatPasswordError'] }}</small>
+              </div>
             </div>
           </div>
 
