--- a/frontend/src/app/pages/register/register.page.html
+++ b/frontend/src/app/pages/register/register.page.html
@@ -119,8 +119,8 @@
           <div>
             <button
               type="submit"
-              class="flex w-full justify-center rounded-md border border-transparent bg-indigo-600 py-2 px-4 text-sm font-medium text-white shadow-sm hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2"
-            >
+              class="flex w-full justify-center rounded-md border border-transparent bg-indigo-600 py-2 px-4 text-sm font-medium text-white shadow-sm hover:bg-indigo-700 
+              focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2">
               Create account
             </button>
           </div>
