--- a/frontend/src/app/pages/register/register.page.html
+++ b/frontend/src/app/pages/register/register.page.html
@@ -124,6 +124,16 @@
               Create account
             </button>
           </div>
+          <!-- Botón de cancelar-->
+          <div>
+            <button
+              type="button"
+              class="flex w-full justify-center rounded-md border border-transparent bg-indigo-600 py-2 px-4 text-sm font-medium text-white shadow-sm hover:bg-indigo-700 
+              focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2"
+              (click)="onCancel()">
+              Cancel
+            </button>
+          </div>
 
           <!-- Link para iniciar sesión -->
           <div class="text-center">
