--- a/frontend/src/app/pages/users/users.page.html
+++ b/frontend/src/app/pages/users/users.page.html
@@ -167,7 +167,11 @@
                 </div>
               </td>
               <td class="p-4 border-b border-slate-600">
-                <p class="text-sm font-semibold text-slate-300">{{ user.role }}</p>
+                <div class="relative grid items-center justify-center px-2 py-1 font-sans text-xs font-bold text-green-900 uppercase rounded-md select-none whitespace-nowrap bg-green-500/20">
+                  <div class="flex flex-col items-center">
+                    <p class="text-sm font-semibold text-slate-300">{{ user.role }}</p>
+                  </div>
+                </div>
               </td>
               <td class="p-4 border-b border-slate-600">
                 <p class="text-sm text-slate-400">{{ this.formatRegistrationDate(user.registration_date) }}</p>
