falta que quede bien register

--- a/frontend/src/app/pages/login/login.page.html
+++ b/frontend/src/app/pages/login/login.page.html
@@ -1,68 +1,76 @@
-<div class="relative h-screen bg-gray-50 bg-[url('https://i.imgur.com/vbWMrvU.jpeg')] bg-cover bg-center overflow-hidden">
+<ion-content class="h-screen bg-gray-50 overflow-hidden">
   
-  <div class="flex min-h-full flex-col justify-center py-12 sm:px-6 lg:px-8">
-    <div class="mt-8 sm:mx-auto sm:w-full sm:max-w-md z-10 relative">
-      <div class="bg-transparent backdrop-blur-md border border-white py-8 px-4 shadow sm:rounded-lg sm:px-10">
-        <h2 class="mt-6 text-center text-3xl font-bold tracking-tight text-white">
-          Sign in to your account
-        </h2>
-        <form class="mt-8 space-y-6" (ngSubmit)="this.onSubmitLogin()">
-          <div>
-            <label for="email" class="block text-sm font-bold text-white">Email address</label>
-            <div class="mt-1">
-              <input
-                [(ngModel)]="this.email"
-                id="email"
-                name="email"
-                type="email"
-                autocomplete="email"
-                required=""
-                class="block w-full appearance-none rounded-md border border-gray-300 bg-transparent px-3 py-2 placeholder-gray-400 text-white focus:border-indigo-500 focus:outline-none focus:ring-indigo-500 sm:text-sm"
-              />
-            </div>
-          </div>
+  <div class="relative h-full bg-[url('https://i.imgur.com/vbWMrvU.jpeg')] bg-cover bg-center">
+    <div class="flex min-h-full flex-col justify-center py-12 sm:px-6 lg:px-8">
+      <div class="mt-8 sm:mx-auto sm:w-full sm:max-w-md z-10 relative">
+        <div class="bg-transparent backdrop-blur-md border border-white py-8 px-4 shadow sm:rounded-lg sm:px-10">
 
-          <div>
-            <label for="password" class="block text-sm font-bold text-white">Password</label>
-            <div class="mt-1">
-              <input
-                [(ngModel)]="this.password"
-                id="password"
-                name="password"
-                type="password"
-                autocomplete="current-password"
-                required=""
-                class="block w-full appearance-none rounded-md border border-gray-300 bg-transparent px-3 py-2 placeholder-gray-400 text-white focus:border-indigo-500 focus:outline-none focus:ring-indigo-500 sm:text-sm"
-              />
+          <h2 class="mt-6 text-center text-3xl font-bold tracking-tight text-white">
+            Sign in to your account
+          </h2>
+          <form class="mt-8 space-y-6" (ngSubmit)="this.onSubmitLogin()">
+            
+            <div>
+              <ion-label for="email" class="block text-sm font-bold text-white">Email address</ion-label>
+              <div class="mt-1">
+                <input
+                  [(ngModel)]="this.email"
+                  id="email"
+                  name="email"
+                  type="email"
+                  autocomplete="email"
+                  required=""
+                  class="block w-full appearance-none rounded-md border border-gray-300 bg-transparent px-3 py-2 placeholder-gray-400 text-white focus:border-indigo-500 focus:outline-none focus:ring-indigo-500 sm:text-sm"
+                />
+              </div>
             </div>
-          </div>
-
-          <div class="flex items-center justify-between">
-            <div class="flex items-center">
-              <input
-                id="remember-me"
-                name="remember-me"
-                type="checkbox"
-                class="h-4 w-4 rounded border-gray-300 text-indigo-600 focus:ring-indigo-500"
-              />
-              <label for="remember-me" class="ml-2 block text-sm text-gray-900">Remember me</label>
+            
+            <div>
+              <ion-label for="password" class="block text-sm font-bold text-white">Password</ion-label>
+              <div class="mt-1">
+                <input
+                  [(ngModel)]="this.password"
+                  id="password"
+                  name="password"
+                  type="password"
+                  autocomplete="current-password"
+                  required=""
+                  class="block w-full appearance-none rounded-md border border-gray-300 bg-transparent px-3 py-2 placeholder-gray-400 text-white focus:border-indigo-500 focus:outline-none focus:ring-indigo-500 sm:text-sm"
+                />
+              </div>
             </div>
 
-            <div class="text-sm">
-              <a href="#" class="font-medium text-indigo-600 hover:text-indigo-500">Forgot your password?</a>
-            </div>
-          </div>
+            <div class="flex items-center justify-between">
+              <div class="flex items-center">
+                <input
+                  id="remember_me"
+                  name="remember_me"
+                  type="checkbox"
+                  class="h-4 w-4 text-indigo-600 focus:ring-indigo-500 border-gray-300 rounded"
+                />
+                <label for="remember_me" class="ml-2 block text-sm text-white">
+                  Remember me
+                </label>
+              </div>
 
-          <div>
-            <button
-              type="submit"
-              class="flex w-full justify-center rounded-md border border-transparent bg-indigo-600 py-2 px-4 text-sm font-medium text-white shadow-sm hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2"
-            >
-              Sign in
-            </button>
-          </div>
-        </form>
+              <div class="text-sm">
+                <a href="#" class="font-medium text-indigo-600 hover:text-indigo-500">
+                  Forgot your password?
+                </a>
+              </div>
+            </div>
+
+            <div>
+              <button
+                type="submit"
+                class="group relative w-full flex justify-center py-2 px-4 border border-transparent text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500"
+              >
+                Sign in
+              </button>
+            </div>
+          </form>
+        </div>
       </div>
     </div>
   </div>
-</div>
+</ion-content>
