--- a/frontend/src/app/pages/property-compare/property-compare.page.html
+++ b/frontend/src/app/pages/property-compare/property-compare.page.html
@@ -1,4 +1,6 @@
 <p>property-compare works!</p>
-<button class="m-3 mt-4 px-4 py-2 bg-purple-500 text-white rounded" (click)="goToAllProperties()">
-    Volver
-</button>
+<app-layout>
+    <button class="m-3 mt-4 px-4 py-2" style="background-color: #8ABFA3; color: white; border-radius: 0.25rem;" (click)="goToAllProperties()">
+        Volver
+    </button>
+</app-layout>
