no quiero que se expandaa

--- a/frontend/src/app/pages/register/register.page.html
+++ b/frontend/src/app/pages/register/register.page.html
@@ -1,8 +1,8 @@
 <ion-content class="h-screen bg-gray-50">
-  <div class="relative h-full bg-[url('https://i.imgur.com/vbWMrvU.jpeg')] bg-cover bg-center ">
+  <div class="relative h-full bg-[url('https://i.imgur.com/vbWMrvU.jpeg')] bg-cover bg-center overflow-hidden">
     <div class="flex min-h-full flex-col justify-center py-12 sm:px-6 lg:px-8 h-full">
-      <div class="mt-8 sm:mx-auto sm:w-full sm:max-w-md z-10 relative">
-        <div class="bg-transparent backdrop-blur-md border border-white py-8 px-4 shadow sm:rounded-lg sm:px-10">
+      <div class="mt-8 sm:mx-auto sm:w-full sm:max-w-lg z-10 relative">
+        <div class="bg-transparent backdrop-blur-md border border-white py-8 px-4 shadow sm:rounded-lg sm:px-8">
           
           <h2 class="text-center text-3xl font-bold tracking-tight text-white">
             Create your account
