--- a/frontend/src/app/pages/property-view/property-view.page.html
+++ b/frontend/src/app/pages/property-view/property-view.page.html
@@ -1,7 +1,7 @@
 <p>property-view works!</p>
 
 <app-layout>
-    <button class="m-3 mt-4 px-4 py-2" style="background-color: #8ABFA3; color: white; border-radius: 0.25rem;" (click)="goToAllProperties()">
+    <button class="m-3 mt-4 px-4 py-2 bg-customGreen text-white rounded" (click)="goToAllProperties()">
         Volver
     </button>
 </app-layout>
