--- a/frontend/src/app/pages/admin-panel/admin-panel.page.html
+++ b/frontend/src/app/pages/admin-panel/admin-panel.page.html
@@ -1,13 +1,11 @@
 <p>admin-panel works!</p>
 <app-layout>
-  <button
-    class="m-3 mt-4 px-4 py-2 bg-purple-500 text-white rounded"
+  <button class="m-3 mt-4 px-4 py-2 bg-customGreen text-white rounded"
     (click)="goToUserList()"
   >
     Lista de usuarios registrados
   </button>
-  <button
-    class="m-3 mt-4 px-4 py-2 bg-purple-500 text-white rounded"
+  <button class="m-3 mt-4 px-4 py-2 bg-customGreen text-white rounded"
     (click)="goToPropertyList()"
   >
     Lista de propiedades
