--- a/frontend/src/app/pages/favorites/favorites.page.html
+++ b/frontend/src/app/pages/favorites/favorites.page.html
@@ -1,9 +1,9 @@
 <app-layout>
     <p>favorites works!</p>
-    <button class="m-3 mt-4 px-4 py-2" style="background-color: #8ABFA3; color: white; border-radius: 0.25rem;" (click)="goToTask()">
+    <button class="m-3 mt-4 px-4 py-2 bg-customGreen text-white rounded" (click)="goToTask()">
         Detalles de la propiedad
     </button>
-    <button class="m-3 mt-4 px-4 py-2" style="background-color: #8ABFA3; color: white; border-radius: 0.25rem;" (click)="goToAllProperties()">
+    <button class="m-3 mt-4 px-4 py-2 bg-customGreen text-white rounded" (click)="goToAllProperties()">
         Volver
     </button>
 </app-layout>
