--- a/frontend/src/app/pages/home/home.page.html
+++ b/frontend/src/app/pages/home/home.page.html
@@ -1,7 +1,7 @@
 <p>home works!</p>
-<button class="m-3 mt-4 px-4 py-2 bg-purple-500 text-white rounded" (click)="Login()">
+<button class="m-3 mt-4 px-4 py-2 bg-customGreen text-white rounded" (click)="Login()">
     Login
 </button>
-<button class="m-3 mt-4 px-4 py-2 bg-purple-500 text-white rounded" (click)="Register()">
+<button class="m-3 mt-4 px-4 py-2 bg-customGreen text-white rounded" (click)="Register()">
     Register
 </button>
