--- a/frontend/src/app/pages/users/users.page.html
+++ b/frontend/src/app/pages/users/users.page.html
@@ -1,7 +1,7 @@
 <app-layout>
   <div class="min-h-screen bg-slate-900 p-4">
-    <button
-      class="mt-4 px-4 py-2 bg-purple-700 text-white rounded"
+    <button 
+    class="m-3 mt-4 px-4 py-2 bg-customGreen text-white rounded"
       (click)="goToAdminPanel()"
     >
       Volver
