--- a/frontend/src/app/layout/layout.component.html
+++ b/frontend/src/app/layout/layout.component.html
@@ -3,7 +3,7 @@
 <div class="container mx-auto p-4">
     <!-- Encabezado general del sitio -->
     <header>
-      
+      <app-navbar></app-navbar>
     </header>
   
     <!-- Contenido específico de cada página -->
