--- a/frontend/src/app/layout/layout.component.html
+++ b/frontend/src/app/layout/layout.component.html
@@ -1,19 +1,19 @@
 <p>layout works!</p>
 
-<div class="container mx-auto p-4">
+<div class="h-screen flex flex-col">
     <!-- Encabezado general del sitio -->
-    <header>
+    <header class="w-full">
       <app-navbar></app-navbar>
     </header>
   
     <!-- Contenido específico de cada página -->
-    <main>
+    <main class="flex-grow mt-4">
       <ng-content></ng-content>
     </main>
   
     <!-- Pie de página general -->
-    <footer class="mt-8 text-center text-gray-600 border-t border-gray-200 pt-4">
+    <footer class="w-full text-center text-gray-600 border-t border-gray-200 py-4 mt-auto bg-transparent">
       © 2024 Nuestra Aplicación Inmobiliaria
     </footer>
-  </div>
+ </div>
   
