--- a/frontend/src/app/layout/layout.component.html
+++ b/frontend/src/app/layout/layout.component.html
@@ -1,18 +1,18 @@
 <p>layout works!</p>
 
-<div class="h-screen flex flex-col">
+<div class="min-h-screen flex flex-col">
     <!-- Encabezado general del sitio -->
     <header class="w-full">
       <app-navbar></app-navbar>
     </header>
   
     <!-- Contenido específico de cada página -->
-    <main class="flex-grow mt-4">
+    <main class="flex-grow mt-6">
       <ng-content></ng-content>
     </main>
   
     <!-- Pie de página general -->
-    <footer class="w-full text-center text-gray-600 border-t border-gray-200 py-4 mt-auto bg-transparent">
+    <footer class="bg-gray-800 text-white text-center p-4">
       © 2024 Nuestra Aplicación Inmobiliaria
     </footer>
  </div>
