--- a/frontend/src/app/pages/login/login.page.html
+++ b/frontend/src/app/pages/login/login.page.html
@@ -1,17 +1,17 @@
 <ion-content class="h-screen bg-gray-50 overflow-hidden">
   
-  <div class="relative h-full bg-[url('https://i.imgur.com/vbWMrvU.jpeg')] bg-cover bg-center">
+  <div class="relative h-full bg-[url('https://kato-lawyer-souzoku.jp/wp-content/uploads/fudousan_201.jpg')] bg-cover bg-center">
     <div class="flex min-h-full flex-col justify-center py-12 sm:px-6 lg:px-8">
       <div class="mt-8 sm:mx-auto sm:w-full sm:max-w-md z-10 relative">
-        <div class="bg-transparent backdrop-blur-md border border-white py-8 px-4 shadow sm:rounded-lg sm:px-10">
+        <div class="bg-white backdrop-blur-md border border-white py-8 px-4 shadow sm:rounded-lg sm:px-10">
 
-          <h2 class="mt-6 text-center text-3xl font-bold tracking-tight text-white">
+          <h2 class="mt-6 text-center text-3xl font-bold tracking-tight text-[#557665]">
             Sign in to your account
           </h2>
           <form class="mt-8 space-y-6" (ngSubmit)="this.onSubmitLogin()">
             
             <div>
-              <ion-label for="email" class="block text-sm font-bold text-white">Email address</ion-label>
+              <ion-label for="email" class="block text-sm font-bold text-[#557665]">Email address</ion-label>
               <div class="mt-1">
                 <input
                   [(ngModel)]="this.email"
@@ -26,7 +26,7 @@
             </div>
             
             <div>
-              <ion-label for="password" class="block text-sm font-bold text-white">Password</ion-label>
+              <ion-label for="password" class="block text-sm font-bold text-[#557665]">Password</ion-label>
               <div class="mt-1">
                 <input
                   [(ngModel)]="this.password"
@@ -48,13 +48,13 @@
                   type="checkbox"
                   class="h-4 w-4 text-indigo-600 focus:ring-indigo-500 border-gray-300 rounded"
                 />
-                <label for="remember_me" class="ml-2 block text-sm text-white">
+                <label for="remember_me" class="ml-2 block text-sm text-[#557665]">
                   Remember me
                 </label>
               </div>
 
               <div class="text-sm">
-                <a href="#" class="font-medium text-indigo-600 hover:text-indigo-500">
+                <a href="#" class="font-medium text-[#386150] hover:text-[#8ABFA3]">
                   Forgot your password?
                 </a>
               </div>
@@ -63,7 +63,7 @@
             <div>
               <button
                 type="submit"
-                class="group relative w-full flex justify-center py-2 px-4 border border-transparent text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500"
+                class="group relative w-full flex justify-center py-2 px-4 border border-transparent text-sm font-medium rounded-md text-white bg-[#557665] hover:bg-[#386150] focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-[#508a72]"
               >
                 Sign in
               </button>
